# thermal.rs

./: Cargo.toml  README.md
benches/: parsing.rs
scripts/: copy-exifs.sh  create-stats-csv.py  extract-exifs.sh
src/: args.rs  cli.rs  dji.rs  exif.rs  flir.rs  image.rs  lib.rs  parse.rs  stats.rs  temperature.rs
