[package]
name = "thermal"
version = "0.1.0"
authors = ["Rajsekar Manokaran <rajsekar.manokaran@aspecscire.com>"]
edition = "2018"

documentation = "https://docs.rs/thermal"
description = "Process thermal images from FLIR cameras"
homepage = "https://github.com/AspecScire/thermal"
repository = "https://github.com/AspecScire/thermal"
readme = "README.md"

license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# CLI, error
anyhow = "1.0.41"
clap = "2.33.3"
Inflector = "0.11.4"
indicatif = { version = "0.16.2", features = ["rayon"] }
itertools = "0.10.1"
shlex = "1.0.0"

# Parsing related
serde = "1.0.126"
serde_derive = "1.0.126"
serde_json = "1.0.64"
zerocopy = "0.5.0"
byteordered = "0.5.0"

lazy_static = "1.4.0"
regex = "1.5.4"

base64 = "0.13.0"
ndarray = "0.15.3"
rayon = "1.5.1"

# Image related
image = "0.23.14"
img-parts = "0.2.3"
png = "0.16.8"
tiff = "0.6.1"
